<resources>
    <string name="app_name">AplicacionMedica</string>

    <string name="app_index_register_text">¿Aún no tienes cuenta?</string>
    <string name="app_index_register_link">Regístrate</string>
    <string name="app_index_welcome">Bienvenidos</string>
    <string name="app_index_name_app">Aplicación Médica</string>
    <string name="app_index_ingresar">Ingresar</string>

    <string name="app_login_title">Ingresa con tu cuenta</string>
    <string name="app_login_help">¿Necesitas ayuda?</string>
    <string name="app_login_email">Correo electrónico</string>
    <string name="app_login_password">Contraseña</string>
    <string name="app_back_button">BackButton</string>

    <string name="app_register_title">Crea una cuenta</string>
    <string name="app_register_name_field">Nombre</string>
    <string name="app_register_lastname_field">Apellido</string>
    <string name="app_register_birthdate">Fecha de nacimiento</string>
    <string name="app_register_password_confirm">Confirmar contraseña</string>
    <string name="app_register_btn">Registrarse</string>

    <string name="app_pass_recover_title">Recuperación de contraseña</string>
    <string name="app_pass_recover_success_title">Correo de recuperación enviado con éxito</string>
    <string name="app_pass_recover_text">Ingresa tu correo eléctronico para hacerte llegar un método de recuperación de contraseña.</string>
    <string name="app_pass_recover_success">Se ha enviado un correo electrónico a tu dirección registrada para seguir con el proceso de recuperación de contraseña.</string>
    <string name="app_pass_recover_success_note">En caso de no recibir el correo, revisa la carpeta de SPAM.</string>
    <string name="app_pass_recover_btn">Enviar</string>
    <string name="app_pass_recover_btn_back">Regresar a inicio</string>

    <string name="app_principal_patients">Pacientes</string>
    <string name="app_principal_recipes">Recetas</string>

    <string name="app_patients_search">Buscar</string>
    <string name="app_patients_add">Agregar Paciente</string>

    <string name="app_patient_detail_recipes">Ver Recetas</string>
    <string name="app_patient_detail_patient">Paciente</string>
    <string name="app_patient_detail_age">Edad</string>
    <string name="app_patient_detail_weight">Peso</string>
    <string name="app_patient_detail_height">Altura</string>
    <string name="app_patient_detail_genre">Sexo</string>
    <string name="app_patient_detail_date">Fecha: </string>
    <string name="app_patient_detail_add_action">Agregar</string>

    <string name="app_add_patient_new_patient">Nuevo Paciente</string>
</resources>