<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/background_register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/back_button" />

    <TextView
        android:id="@+id/txt_title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_register_title"
        android:fontFamily="@font/normal"
        android:textSize="30sp"
        android:textColor="@color/black_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="300dp"

        android:layout_height="50sp"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/app_register_name_field"
        android:inputType="textPersonName"

        android:textColor="@color/black_grey"
        android:textColorHint="@color/black_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_register" />

    <EditText
        android:id="@+id/txt_lastname"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/app_register_lastname_field"
        android:inputType="textPersonName"
        android:textColor="@color/black_grey"
        android:textColorHint="@color/black_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <EditText
        android:id="@+id/txt_birthdate"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/app_register_birthdate"
        android:inputType="date"
        android:textColor="@color/black_grey"
        android:textColorHint="@color/black_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_lastname" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/app_login_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black_grey"
        android:textColorHint="@color/black_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_birthdate" />

    <EditText
        android:id="@+id/txt_password_register"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/app_login_password"
        android:inputType="textPassword"
        android:textColor="@color/black_grey"
        android:textColorHint="@color/black_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <EditText
        android:id="@+id/txt_confirm_password_register"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/normal"
        android:hint="@string/app_register_password_confirm"
        android:inputType="textPassword"
        android:textColor="@color/black_grey"
        android:textColorHint="@color/black_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password_register" />


    <Button
        android:id="@+id/btn_register"
        android:layout_width="180dp"
        android:layout_height="50sp"
        android:background="@drawable/btn_ingresar"
        android:text="@string/app_register_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_confirm_password_register"
        app:layout_constraintVertical_bias="0.10" />

</androidx.constraintlayout.widget.ConstraintLayout>