<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Patients"
    android:background="@drawable/background_type1">

    <EditText
        android:id="@+id/txt_search_patient"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/input_field"
        android:fontFamily="@font/normal"
        android:hint="@string/app_patients_search"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/normal"
        android:textColor="@color/black_grey"
        android:textSize="24sp"
        android:text="@string/app_principal_patients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_search_patient" />

    <ListView
        android:id="@+id/lst_patients"
        android:layout_width="348dp"
        android:layout_height="270dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/base_tabla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_add_patient"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="@font/bold"
        android:text="@string/app_patients_add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lst_patients" />

</androidx.constraintlayout.widget.ConstraintLayout>